--- a/views/partials/main.hbs
+++ b/views/partials/main.hbs
@@ -102,7 +102,7 @@
                   <span style="font-weight:bold; margin: 6px;"> Principal   Returned </span>
                   
               <div class = "row move_button">
-                  <a href="?a=login" class="button buy_now_text" role="button"><b>DETAILS</b></a>
+                  <a href="/login" class="button buy_now_text" role="button"><b>DETAILS</b></a>
               </div>
             </div>
           </div>
