--- a/views/partials/main2.hbs
+++ b/views/partials/main2.hbs
@@ -38,7 +38,7 @@
                         <div class="col-lg-3">
                             <div id="logo" class="logo">
                                 <a href="/" rel="home">
-                                    <img src="/images/logo.png" alt="image">
+                                    <img src="/images/logo@2x.png" alt="image">
                                 </a>
                             </div><!-- /.logo -->
                         </div>
